--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,18 @@
-version: "3.9"
 services:
+  api:
+    build:
+      context: ./src/Api
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    depends_on:
+      - db
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "8080:80"
   db:
     image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
@@ -7,19 +20,3 @@ services:
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
-
-  api:
-    build: ./src/Api
-    ports:
-      - "5000:80"
-    environment:
-      - ConnectionStrings__DefaultConnection=Server=db;Database=TasksDb;User=sa;Password=Your_password123;TrustServerCertificate=True;
-    depends_on:
-      - db
-
-  frontend:
-    build: ./frontend
-    ports:
-      - "8080:8080"
-    depends_on:
-      - api
