--- a/src/Api/Dockerfile
+++ b/src/Api/Dockerfile
@@ -2,17 +2,23 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 WORKDIR /src
 
-# Copy csproj and restore
-COPY *.csproj ./
+COPY Api/Api.csproj Api/
+COPY Application/Application.csproj Application/
+COPY Domain/Domain.csproj Domain/
+COPY Infrastructure/Infrastructure.csproj Infrastructure/
+
+WORKDIR /src/Api
 RUN dotnet restore
 
-# Copy the rest and build
+WORKDIR /src
 COPY . .
+
+WORKDIR /src/Api
 RUN dotnet publish -c Release -o /app
 
-# Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:9.0
 WORKDIR /app
 COPY --from=build /app .
 EXPOSE 5000
+ENV ASPNETCORE_URLS=http://+:5000
 ENTRYPOINT ["dotnet", "Api.dll"]
